Refs #8671; remove swf animation when closing the media player to avoid having the animations play even after it's no longer visible; close the video popup if animation is open an vice-versa

--- a/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
+++ b/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
@@ -146,6 +146,7 @@ h2#player-title,
     height:375px;
     background-color:#FFFFFF;
     position:absolute; 
+    top: 0;
     z-index: 1000;
 }
 
